--- a/css/style.css
+++ b/css/style.css
@@ -151,9 +151,9 @@ img {
 }
 
 .container {
-  max-width: 1190px;
+  max-width: 1260px;
   width: 100%;
-  padding: 0 15px;
+  padding: 0 50px;
   margin: 0 auto;
 }
 
@@ -296,6 +296,7 @@ img {
 .header__logo {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-right: 40px;
   padding: 7px 14px;
   max-width: 160px;
@@ -318,13 +319,9 @@ img {
   background-color: var(--color-active);
 }
 
-.logo__text {
-  font-weight: 700;
-  font-size: 16px;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  text-align: center;
-  color: var(--color-default);
+.logo__image {
+  width: 43px;
+  height: 19px;
 }
 
 .logo__descr {
@@ -510,6 +507,10 @@ img {
 }
 
 /* banner */
+.banner {
+  padding-bottom: 40px;
+}
+
 .banner__wrapper {
   padding: 90px 40px;
   background-image: url("../image/banner/banner-bg.png");
@@ -520,7 +521,7 @@ img {
 
 .banner__text {
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 14px;
   font-weight: 400;
   font-size: 12px;
   color: rgba(0, 0, 0, 0.6);
@@ -533,6 +534,327 @@ img {
 .banner__title {
   margin-bottom: 13px;
 }
+
+/* gallery */
+.gallery {
+  padding-top: 38px;
+  padding-bottom: 80px;
+}
+
+.gallery__title {
+  margin-bottom: 30px;
+}
+
+.gallery__wrapper {
+  position: relative;
+  margin-bottom: 75px;
+}
+
+.gallery__slider {
+  overflow: hidden;
+}
+
+.gallery__slider .slick-list {
+  margin: 0 -10px;
+}
+
+.gallery__slider .slick-slide:not(.slick-active) {
+  opacity: 0.3;
+}
+
+.gallery__slide {
+  padding: 0 10px;
+}
+
+.gallery__content {
+  position: relative;
+  max-width: 260px;
+  min-height: 170px;
+}
+
+.gallery__video-play {
+  position: absolute;
+  top: 62px;
+  left: 106px;
+}
+
+.gallery__video-play:focus {
+  outline: none;
+}
+
+.gallery__video-play:focus path {
+  fill: var(--color-focus-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__video-play:hover path {
+  fill: var(--color-hover-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__video-play:active path {
+  fill: var(--color-active-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery__slider-arrows {
+  position: absolute;
+  right: -50px;
+  top: 66px;
+}
+
+.gallery__slider-arrow {
+  display: flex;
+}
+
+.gallery__slider-arrow:focus {
+  outline: none;
+}
+
+.gallery__slider-arrow:focus circle {
+  fill: var(--color-focus-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__slider-arrow:hover circle{
+  fill: var(--color-hover-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__slider-arrow:active circle{
+  fill: var(--color-active-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.gallery__slider-prev {
+  display: none;
+}
+
+.gallery__descr {
+  max-width: 860px;
+  line-height: 140%;
+}
+
+/* collection */
+.collection {
+  padding-top: 77px;
+  padding-bottom: 80px;
+  background-color: var(--color-bg-light);
+}
+
+.collection__title {
+  margin-bottom: 43px;
+}
+
+.collection__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collection__left {
+  max-width: 360px;
+  width: 100%;
+}
+
+.collection__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 16px;
+}
+
+.collection__item-label {
+  position: relative;
+  user-select: none;
+  cursor: pointer;
+}
+
+.collection__item-checkbox {
+  position: absolute;
+  appearance: none;
+}
+
+.collection__item-position,
+.collection__count {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.collection__item-position::before {
+  content: "";
+  position: absolute;
+  right: -55px;
+  top: 50%;
+  width: 22px;
+  height: 22px;
+  background-image: url("../image/collection/checkbox-before.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateY(-50%);
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.collection__item-position::after {
+  content: "";
+  position: absolute;
+  right: -55px;
+  top: 50%;
+  width: 22px;
+  height: 22px;
+  background-image: url("../image/collection/checkbox-after.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.collection__item-name,
+.collection__count-name
+{
+  font-weight: 400;
+  font-size: 18px;
+  color: var(--color-default);
+}
+
+.collection__item-price,
+.collection__count-price
+{
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--color-default);
+}
+
+.collection__item-checkbox:checked + .collection__item-position::before {
+  opacity: 0;
+}
+
+.collection__item-checkbox:checked + .collection__item-position::after {
+  opacity: 1;
+}
+
+.collection__count {
+  margin-bottom: 10px;
+  padding: 20px 0;
+  border-top: 1px solid var(--color-default);
+}
+
+.collection__btn {
+  position: relative;
+  width: 100%;
+  text-align: start;
+}
+
+.collection__btn::after {
+  content: "";
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  width: 19px;
+  height: 19px;
+  background-image: url("../image/collection/add-icon.svg");
+  transform: translateY(-50%);
+}
+
+.collection__right {
+  position: relative;
+  max-width: 688px;
+}
+
+.collection__slider .slick-list {
+  margin: 0 -10px;
+}
+
+.collection__slide {
+  padding: 0 10px;
+}
+
+.collection__picture {
+  display: flex;
+  position: relative;
+  min-height: 216px;
+  overflow: hidden;
+}
+
+.collection__image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px 6px 0 0;
+}
+
+.collection__content {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 15px 20px 15px;
+  min-height: 192px;
+  background-color: var(--color-bg-white);
+}
+
+.collection__content-stars {
+  display: flex;
+  gap: 7px;
+  margin-bottom: 12px;
+}
+
+.collection__content-subtitle {
+  margin: 0;
+  margin-bottom: 15px;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--color-default);
+}
+
+.collection__content-price {
+  margin-bottom: auto;
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--color-default);
+}
+
+.collection__btn {
+  padding: 14px 20px;
+}
+
+.collection__arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.collection__prev {
+  left: -40px;
+}
+
+.collection__next {
+  right: -40px;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
