--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ img {
   --color-white: #fff;
   --color-bg-white: #fff;
   --color-bg-light: #eee;
+  --color-bg-light-grey: #e0e0e0;
   --color-bg-grey: #c4c4c4;
   --color-bg-dark: #000;
   --color-focus: #c93;
@@ -107,7 +108,7 @@ img {
 }
 
 .btn {
-  padding: 12px 20px;
+  padding: 13px 20px;
   font-weight: 500;
   font-size: 16px;
   border-radius: 6px;
@@ -651,7 +652,7 @@ img {
 }
 
 .collection__title {
-  margin-bottom: 43px;
+  margin-bottom: 41px;
 }
 
 .collection__wrapper {
@@ -668,7 +669,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-bottom: 16px;
+  margin-bottom: 18px;
 }
 
 .collection__item-label {
@@ -809,7 +810,7 @@ img {
 .collection__content-stars {
   display: flex;
   gap: 7px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
 
 .collection__content-subtitle {
@@ -834,7 +835,27 @@ img {
 .collection__arrow {
   position: absolute;
   top: 50%;
+  display: flex;
   transform: translateY(-50%);
+}
+
+.collection__arrow:focus {
+  outline:none;
+}
+
+.collection__arrow:focus circle {
+  fill: var(--color-focus-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.collection__arrow:hover circle{
+  fill: var(--color-hover-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.collection__arrow:active circle{
+  fill: var(--color-active-btn);
+  transition: fill 0.2s ease-in-out;
 }
 
 .collection__prev {
@@ -845,7 +866,154 @@ img {
   right: -40px;
 }
 
+/* suggestion */
+.suggestion {
+  padding-top: 78px;
+  padding-bottom: 80px;
+}
 
+.suggestion__title {
+  margin-bottom: 30px;
+}
+
+.suggestion__wrapper {
+  position: relative;
+}
+
+.suggestion__slider .slick-list {
+  margin: 0 -10px;
+}
+
+.suggestion__slide {
+  position: relative;
+  padding: 0 10px;
+}
+
+.suggestion__picture {
+  display: flex;
+  position: relative;
+  min-height: 216px;
+  overflow: hidden;
+}
+
+.suggestion__image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px 6px 0 0;
+}
+
+.suggestion__discount {
+  position: absolute;
+  top: 15px;
+  left: 27px;
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 14px;
+  background-color: var(--color-white);
+  color: var(--color-default);
+}
+
+.suggestion__content {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 15px 20px 15px;
+  min-height: 215px;
+  background-color: var(--color-bg-light-grey);
+}
+
+.suggestion__content-stars {
+  display: flex;
+  gap: 7px;
+  margin-bottom: 14px;
+}
+
+.suggestion__content-subtitle {
+  margin: 0;
+  margin-bottom: 15px;
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--color-default);
+}
+
+.suggestion__content-old-price {
+  position: relative;
+  margin-bottom: 6px;
+  width: fit-content;
+  font-weight: 400;
+  font-size: 13px;
+  color: rgba(0, 0, 0, .6);
+}
+
+.suggestion__content-old-price::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  border-bottom: 1px solid #000;
+  transform: translateY(-50%) rotate(-6deg);
+}
+
+.suggestion__content-price {
+  margin-bottom: auto;
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--color-default);
+}
+
+.suggestion__btn {
+  position: relative;
+  text-align: start;
+}
+
+.suggestion__btn::after {
+  content: "";
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  width: 19px;
+  height: 19px;
+  background-image: url("../image/collection/add-icon.svg");
+  transform: translateY(-50%);
+}
+
+.suggestion__arrow {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  transform: translateY(-50%);
+}
+
+.suggestion__arrow:focus {
+  outline:none;
+}
+
+.suggestion__arrow:focus circle {
+  fill: var(--color-focus-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.suggestion__arrow:hover circle{
+  fill: var(--color-hover-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.suggestion__arrow:active circle{
+  fill: var(--color-active-btn);
+  transition: fill 0.2s ease-in-out;
+}
+
+.suggestion__prev {
+  left: -85px;
+}
+
+.suggestion__next {
+  right: -85px;
+}
 
 
 
