--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ img {
   --color-white: #fff;
   --color-bg-white: #fff;
   --color-bg-light: #eee;
+  --color-accent: #00d6ff;
   --color-bg-light-grey: #e0e0e0;
   --color-bg-grey: #c4c4c4;
   --color-bg-dark: #000;
@@ -152,9 +153,9 @@ img {
 }
 
 .container {
-  max-width: 1260px;
+  max-width: 1280px;
   width: 100%;
-  padding: 0 50px;
+  padding: 0 60px;
   margin: 0 auto;
 }
 
@@ -747,6 +748,11 @@ img {
   opacity: 1;
 }
 
+/* .collection__item-checkbox:focus + .collection__item-position::before {
+  outline-offset: 3px;
+  outline: 2px solid var(--color-focus);
+} */
+
 .collection__count {
   margin-bottom: 10px;
   padding: 20px 0;
@@ -869,7 +875,7 @@ img {
 /* suggestion */
 .suggestion {
   padding-top: 78px;
-  padding-bottom: 80px;
+  padding-bottom: 26px;
 }
 
 .suggestion__title {
@@ -1014,6 +1020,173 @@ img {
 .suggestion__next {
   right: -85px;
 }
+
+/* footer */
+.footer {
+  padding: 47px 0;
+  background-color: var(--color-bg-dark);
+}
+
+.footer__container {
+  padding: 0 7px;
+}
+
+.footer__top {
+  margin-bottom: 100px;
+}
+
+.footer__subtitle {
+  margin: 0;
+  margin-bottom: 11px;
+  max-width: 467px;
+  font-weight: 500;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: var(--color-white);
+}
+
+.footer__subdescr {
+  margin: 0;
+  margin-bottom: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  color: var(--color-accent);
+}
+
+.footer__form {
+  display: flex;
+  gap: 95px;
+  align-items: center;
+  margin-right: auto;
+}
+
+.form__input {
+  padding: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  border: none;
+  border-bottom: 1px solid var(--color-white);
+  background-color: inherit;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: 21px 21px;
+  color: var(--color-white);
+}
+
+.form__input-name {
+  padding-left: 32px;
+  background-image: url('../image/footer/name-icon.svg');
+}
+
+.form__input-phone {
+  padding-left: 36px;
+  background-image: url('../image/footer/phone-icon.svg');
+}
+
+.form__input-mail {
+  padding-left: 45px;
+  margin-right: 38px;
+  background-image: url('../image/footer/mail-icon.svg');
+  background-size: 29px 22px;
+}
+
+.form__btn {
+  padding: 23px 51px;
+  font-weight: 400;
+  font-size: 13px;
+  text-transform: uppercase;
+  background-color: var(--color-bg-white);
+  transition: background-color 0.3s;
+}
+
+.form__btn:hover {
+  background-color: var(--color-hover-btn);
+}
+
+.footer__bottom {
+  display: flex;
+}
+
+.footer__link {
+  display: flex;
+  gap: 36px;
+  margin-right: auto;
+}
+
+.footer__link-left {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer__item {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-white);
+}
+
+.footer__policy {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+  color: var(--color-white);
+}
+
+.footer__text {
+  font-weight: 400;
+  font-size: 16px;
+  color: rgba(255, 255, 255, .6);
+}
+
+.footer__contacts {
+  display: flex;
+  flex-direction: column;
+  text-align: end;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.footer__social-item {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 140%;
+  text-align: right;
+  color: rgba(255, 255, 255, .6);;
+}
+
+.footer__tel {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 12px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-white);
+}
+
+.footer__mail {
+  font-weight: 700;
+  font-size: 14px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-white);
+}
+
+
 
 
 
