--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,9 @@ img {
 :root {
   --color-default: #000;
   --color-white: #fff;
+  --color-accent: #00d6ff;
   --color-bg-white: #fff;
   --color-bg-light: #eee;
-  --color-accent: #00d6ff;
   --color-bg-light-grey: #e0e0e0;
   --color-bg-grey: #c4c4c4;
   --color-bg-dark: #000;
@@ -153,9 +153,9 @@ img {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1310px;
   width: 100%;
-  padding: 0 60px;
+  padding: 0 75px;
   margin: 0 auto;
 }
 
@@ -169,7 +169,7 @@ img {
   /* position: relative; */
   display: flex;
   align-items: center;
-  padding: 12px 0 13px 0;
+  padding: 13px 0 14px 0;
   border-bottom: 1px solid rgba(0, 0, 0, .3);
 }
 
@@ -182,6 +182,10 @@ img {
   height: 1px;
   background-color: rgba(0, 0, 0, .3);
 } */
+
+.burger {
+  display: none;
+}
 
 .header__location {
   position: relative;
@@ -292,7 +296,7 @@ img {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 23px 0;
+  padding: 22px 0;
 }
 
 .header__logo {
@@ -310,15 +314,6 @@ img {
 .header__logo:focus {
   outline-offset: 3px;
   outline: 2px solid var(--color-focus);
-}
-
-.header__logo:hover {
-  outline: none;
-  background-color: var(--color-hover);
-}
-
-.header__logo:active {
-  background-color: var(--color-active);
 }
 
 .logo__image {
@@ -370,7 +365,7 @@ img {
   font-size: 16px;
   border: none;
   outline: none;
-  color: rgba(0, 0, 0, .4);
+  color: var(--color-default);
 }
 
 .header__search-btn {
@@ -397,6 +392,11 @@ img {
 
 .header__search-image {
   display: flex;
+}
+
+.header__links {
+  display: flex;
+  max-width: 290px;
 }
 
 .header__favorite {
@@ -534,7 +534,7 @@ img {
 }
 
 .banner__title {
-  margin-bottom: 13px;
+  margin-bottom: 14px;
 }
 
 /* gallery */
@@ -574,10 +574,16 @@ img {
   min-height: 170px;
 }
 
+.gallery__content video {
+  width: 100%;
+  height: 100%;
+}
+
 .gallery__video-play {
   position: absolute;
-  top: 62px;
-  left: 106px;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%), translateY(-50%);
 }
 
 .gallery__video-play:focus {
@@ -658,7 +664,7 @@ img {
 
 .collection__wrapper {
   display: flex;
-  justify-content: space-between;
+  gap: 110px;
 }
 
 .collection__left {
@@ -874,8 +880,8 @@ img {
 
 /* suggestion */
 .suggestion {
-  padding-top: 78px;
-  padding-bottom: 26px;
+  padding-top: 79px;
+  padding-bottom: 25px;
 }
 
 .suggestion__title {
@@ -1014,11 +1020,11 @@ img {
 }
 
 .suggestion__prev {
-  left: -85px;
+  left: -60px;
 }
 
 .suggestion__next {
-  right: -85px;
+  right: -60px;
 }
 
 /* footer */
@@ -1028,7 +1034,7 @@ img {
 }
 
 .footer__container {
-  padding: 0 7px;
+  padding: 0 22px;
 }
 
 .footer__top {
@@ -1056,7 +1062,7 @@ img {
 
 .footer__form {
   display: flex;
-  gap: 95px;
+  gap: 15px 95px;
   align-items: center;
   margin-right: auto;
 }
@@ -1086,7 +1092,7 @@ img {
 
 .form__input-mail {
   padding-left: 45px;
-  margin-right: 38px;
+  margin-right: auto;
   background-image: url('../image/footer/mail-icon.svg');
   background-size: 29px 22px;
 }
@@ -1135,11 +1141,21 @@ img {
   color: var(--color-white);
 }
 
+.footer__item:hover {
+  color: var(--color-hover);
+  transition: color 0.3s ease-in-out;
+}
+
 .footer__policy {
   font-weight: 400;
   font-size: 14px;
   line-height: 140%;
   color: var(--color-white);
+}
+
+.footer__policy:hover {
+  color: var(--color-hover);
+  transition: color 0.3s ease-in-out;
 }
 
 .footer__text {
@@ -1169,6 +1185,11 @@ img {
   color: rgba(255, 255, 255, .6);;
 }
 
+.footer__social-item:hover {
+  color: var(--color-hover);
+  transition: color 0.3s ease-in-out;
+}
+
 .footer__tel {
   margin-bottom: 12px;
   font-weight: 700;
@@ -1178,12 +1199,22 @@ img {
   color: var(--color-white);
 }
 
+.footer__tel:hover {
+  color: var(--color-hover);
+  transition: color 0.3s ease-in-out;
+}
+
 .footer__mail {
   font-weight: 700;
   font-size: 14px;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: var(--color-white);
+}
+
+.footer__mail:hover {
+  color: var(--color-hover);
+  transition: color 0.3s ease-in-out;
 }
 
 
